add supoort for commandline args

--- a/HsWiki.cabal
+++ b/HsWiki.cabal
@@ -24,6 +24,7 @@ executable HsWiki
                      , yesod
                      , text
                      , directory
+                     , cmdargs
 
   default-language:    Haskell2010
 
