--- a/HsWiki.cabal
+++ b/HsWiki.cabal
@@ -1,33 +1,40 @@
-name:                HsWiki
-version:             0.1.0.0
--- synopsis:
--- description:      Simple Wiki in the spirit of the legendary C2-Wiki - written in haskell with yesod.
-homepage:            https://github.com/thma/HsWiki#readme
-license:             BSD3
-author:              Thomas Mahler
-maintainer:          thma@apache.org
-copyright:           2018 Thomas Mahler
-category:            Web
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+cabal-version: 1.12
 
+-- This file has been generated from package.yaml by hpack version 0.34.4.
+--
+-- see: https://github.com/sol/hpack
 
-executable HsWiki
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , markdown
-                     , blaze-html
-                     , yesod
-                     , text
-                     , directory
-                     , cmdargs
-
-  default-language:    Haskell2010
-
+name:           HsWiki
+version:        0.1.0.0
+description:    Please see the README on GitHub at <https://github.com/thma/HsWiki#readme>
+homepage:       https://github.com/thma/HsWiki#readme
+bug-reports:    https://github.com/thma/HsWiki/issues
+author:         Thomas Mahler
+maintainer:     thma@apache.org
+copyright:      2021 Thomas Mahler
+license:        BSD3
+build-type:     Simple
+extra-source-files:
+    README.md
 
 source-repository head
-  type:     git
-  location: https://github.com/thma/HsWiki.git
+  type: git
+  location: https://github.com/thma/HsWiki
+
+executable HsWiki
+  main-is: Main.hs
+  other-modules:
+      Util.Config
+      Paths_HsWiki
+  hs-source-dirs:
+      app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , blaze-html
+    , cmark-gfm
+    , cmdargs
+    , directory
+    , text
+    , yesod
+  default-language: Haskell2010
