adding a Graphviz powered Site Map...

--- a/HsWiki.cabal
+++ b/HsWiki.cabal
@@ -37,6 +37,10 @@ executable HsWiki
     , cmdargs
     , directory
     , extra
+    , iproute
+    , network
     , text
+    , time
+    , wai
     , yesod
   default-language: Haskell2010
