--- a/HsWiki.cabal
+++ b/HsWiki.cabal
@@ -24,6 +24,7 @@ source-repository head
 executable HsWiki
   main-is: Main.hs
   other-modules:
+      PageName
       Util.Config
       Util.HtmlElements
       Paths_HsWiki
